[package]
name = "mft_ntfs"
version = "0.1.0"
authors = ["styxpilled <styx.dev@gmail.com>", "Zachary Neely <zrussellneely@gmail.com>"]
edition = "2021"
description = "Parses the Windows NTFS MFT and provides an API for querying the MFT."

[lib]
name = "mft_ntfs"
path = "src/lib.rs"

[profile.dev]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = true

[dependencies]
indicatif = { version = "0.15", optional = true }
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "handleapi",
    "ioapiset",
    "impl-default",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
] }

[features]
progress = ["indicatif"]
